[package]
name = "ksu-core"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
const_format = "0.2"
log = "0.4"
zip = { version = "3", default-features = false, features = [
    "deflate",
    "deflate64",
    "time",
    "lzma",
    "xz",
] }
which = "7"
anyhow = "1"
nom = "8"
derive-new = "0.7"
jwalk = "0.8"

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
rustix = { git = "https://github.com/Kernel-SU/rustix.git", branch = "main", features = [
    "all-apis",
]} 
android-properties = { version = "0.2", features = ["bionic-deprecated"] }
extattr = "1"
