[package]
name = "ksud"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
const_format = "0.2"
log = "0.4"
env_logger = { version = "0.11", default-features = false }
rust-embed = { version = "8", features = [
    "debug-embed",
    "compression", # must clean build after updating binaries
] }
which = "8"
sha1 = "0.10"
sha256 = "1"
tempfile = "3"
chrono = "0.4"
regex-lite = "0.1"

[target.'cfg(target_os = "android")'.dependencies]
rustix = { version = "1", features = [
    "all-apis",
] }
android-properties = { version = "0.2", features = ["bionic-deprecated"] }
android_logger = { version = "0.15", default-features = false }
zip = { version = "7",  features = [
    "deflate",
    "deflate64",
    "time",
    "lzma",
    "xz",
], default-features = false }
zip-extensions = { version = "0.13", features = [
    "deflate",
    "lzma",
    "xz",
], default-features = false }
java-properties = { git = "https://github.com/Kernel-SU/java-properties.git", branch = "master", default-features = false }
serde_json = "1"
encoding_rs = "0.8"
humansize = "2"
libc = "0.2"
extattr = "1"
jwalk = "0.8"
is_executable = "1"
nom = "8"
derive-new = "0.7"
getopts = "0.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
