[package]
name = "ksuinit"
version = "2.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# for elf parsing
goblin = "0.10"
scroll = "0.13"

anyhow = "1"
# If you want to use the following dependencies, please use aarch64-unknown-linux-musl & x86_64-unknown-linux-musl to compile statically
# rustix = { git = "https://github.com/bytecodealliance/rustix", rev = "7b44528", features = ["mount", "fs", "runtime", "system", "process"] }
rustix = { git = "https://github.com/Kernel-SU/rustix.git", rev = "4a53fbc", features = ["mount", "fs", "runtime", "system", "process"] }

syscalls = { version = "0.8", default-features = false, features = [
    "aarch64",
    "x86_64",
] }

# for kmsg logging
log = "0.4"
kernlog = { git = "https://github.com/kstep/kernlog.rs" }

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"
