[package]
name = "ksuinit"
version = "2.0.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# for elf parsing
goblin = "0.10"
scroll = "0.13"

anyhow.workspace = true
rustix = { git = "https://github.com/Kernel-SU/rustix.git", rev = "4a53fbc", features = ["mount", "fs", "runtime", "system", "process"] }

syscalls = { version = "0.8", default-features = false, features = [
    "aarch64",
    "x86_64",
] }

# for kmsg logging
log.workspace = true
kernlog = { git = "https://github.com/kstep/kernlog.rs" }
