[package]
name = "meta-overlayfs"
version = "1.0.0"
edition = "2024"
authors = ["KernelSU Developers"]
description = "An implementation of a metamodule using OverlayFS for KernelSU"
license = "GPL-3.0"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = { version = "0.11", default-features = false }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
rustix = { git = "https://github.com/Kernel-SU/rustix.git", rev = "4a53fbc7cb7a07cabe87125cc21dbc27db316259", features = ["all-apis"] }
procfs = "0.17"

[profile.release]
strip = true
opt-level = "z"       # Minimize binary size
lto = true            # Link-time optimization
codegen-units = 1     # Maximum optimization
panic = "abort"       # Reduce binary size
